--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>mnode-parent</artifactId>
 		<groupId>org.mnode</groupId>
-		<version>1.11</version>
+		<version>1.12</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
@@ -128,6 +128,26 @@
 					</instructions>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack-shared-resources</id>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<outputDirectory>${project.build.directory}/mnode-tools</outputDirectory>
+							<includeArtifacIds>mnode-tools</includeArtifacIds>
+							<includeGroupIds>${project.parent.groupId}</includeGroupIds>
+							<excludeTransitive>true</excludeTransitive>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -234,6 +254,16 @@
 			<version>1.2.1</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Shared tool resources -->
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>mnode-tools</artifactId>
+            <version>${project.parent.version}</version>
+            <classifier>resources</classifier>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<repositories>
@@ -268,7 +298,7 @@
                     <linkXref>true</linkXref>
                     <targetJdk>1.5</targetJdk>
                     <rulesets>
-                        <ruleset>http://svn.mnode.org/tools/pmd/mnode_ruleset.xml</ruleset>
+                        <ruleset>${project.build.directory}/mnode-tools/pmd/mnode_ruleset.xml</ruleset>
                     </rulesets>
                 </configuration>
             </plugin>
