Use shared resources to allow for offline builds

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>mnode-parent</artifactId>
 		<groupId>org.mnode</groupId>
-		<version>1.9</version>
+		<version>1.12</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
@@ -140,6 +140,26 @@
 				</executions>
 			</plugin>
  -->
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack-shared-resources</id>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<outputDirectory>${project.build.directory}/mnode-tools</outputDirectory>
+							<includeArtifacIds>mnode-tools</includeArtifacIds>
+							<includeGroupIds>${project.parent.groupId}</includeGroupIds>
+							<excludeTransitive>true</excludeTransitive>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
@@ -216,6 +236,16 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Shared tool resources -->
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>mnode-tools</artifactId>
+            <version>${project.parent.version}</version>
+            <classifier>resources</classifier>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<repositories>
@@ -253,7 +283,7 @@
                     <linkXref>true</linkXref>
                     <targetJdk>1.4</targetJdk>
                     <rulesets>
-                        <ruleset>http://svn.mnode.org/tools/pmd/mnode_ruleset.xml</ruleset>
+                        <ruleset>${project.build.directory}/mnode-tools/pmd/mnode_ruleset.xml</ruleset>
                     </rulesets>
                 </configuration>
             </plugin>
