Added codenarc plugin

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,15 @@
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>codenarc-maven-plugin</artifactId>
+                <version>0.17-1</version>
+                <configuration>
+                   <sourceDirectory>src/main/groovy</sourceDirectory>
+                </configuration>
+            </plugin>
             
             <plugin>
               <artifactId>maven-jar-plugin</artifactId>
