--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 	<inceptionYear>2004</inceptionYear>
 	<licenses>
 		<license>
-            <name>${pom.name} - License</name>
-			<url>${scm.url}/raw-file/tip/LICENSE</url>
+            <name>${project.name} - License</name>
+			<url>${project.scm.url}/raw-file/tip/LICENSE</url>
 		</license>
 	</licenses>
 
@@ -284,6 +284,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
+		<version>2.12</version>
             </plugin>
 
             <plugin>
