--- a/pom.xml
+++ b/pom.xml
@@ -111,14 +111,13 @@
                 <artifactId>maven-license-plugin</artifactId>
             </plugin>
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>codenarc-maven-plugin</artifactId>
-                <version>0.17-1</version>
-                <configuration>
-                   <sourceDirectory>src/main/groovy</sourceDirectory>
-                </configuration>
-            </plugin>
+	<plugin>
+		<groupId>com.atlassian.maven.plugins</groupId>
+		<artifactId>maven-clover2-plugin</artifactId>
+		<configuration>
+			<jdk>1.4</jdk>
+		</configuration>
+	</plugin>
             
             <plugin>
               <artifactId>maven-jar-plugin</artifactId>
