--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>mnode-parent</artifactId>
 		<groupId>org.mnode</groupId>
-		<version>1.16</version>
+		<version>1.17-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
@@ -76,6 +76,7 @@
 				<includes>
 				    <include>overview.html</include>
 				    <include>net/**</include>
+					<include>META-INF/services/org.codehaus.groovy.runtime.ExtensionModule</include>
 				</includes>
 				<filtering>true</filtering>
 			</resource>
