--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
 	</description>
 	<url>http://ical4j.sourceforge.net</url>
 
+    <prerequisites>
+        <maven>2.2.1</maven>
+    </prerequisites>
+
 	<issueManagement>
 		<system>SourceForge.net</system>
 		<url>https://sourceforge.net/tracker/?group_id=107024</url>
@@ -99,6 +103,12 @@
             <plugin>
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*.ics</exclude>
+                        <exclude>**/*.alias</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
             
             <plugin>
@@ -168,7 +178,65 @@
 					</execution>
 				</executions>
 			</plugin>
+            
+            <!-- http://maven.apache.org/plugins/maven-enforcer-plugin/plugin-info.html -->
+            <plugin>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.2</version>
+                <executions>
+                    <execution>
+                        <id>enforce-sane-versions</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requirePluginVersions />
+                                <dependencyConvergence />
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>            
 		</plugins>
+        
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.1</version>
+                </plugin>        
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>        
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>        
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.6</version>
+                </plugin>        
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>2.5</version>
+                </plugin>        
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>        
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.mycila.maven-license-plugin</groupId>
+                    <artifactId>maven-license-plugin</artifactId>
+                    <version>1.10.b1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 	</build>
 
 	<dependencies>
@@ -333,4 +401,15 @@
  -->
 		</plugins>
 	</reporting>
+    
+    <dependencyManagement>
+        <dependencies>
+            <!-- force dependency convergence -->
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-core</artifactId>
+                <version>1.3</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
