--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
 	<issueManagement>
 		<system>SourceForge.net</system>
-		<url>https://sourceforge.net/tracker/?group_id=107024</url>
+		<url>https://sourceforge.net/p/ical4j/bugs/</url>
 	</issueManagement>
 	<inceptionYear>2004</inceptionYear>
 	<licenses>
@@ -32,9 +32,9 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:hg:http://ical4j.hg.sourceforge.net:8000/hgroot/ical4j/ical4j</connection>
-		<developerConnection>scm:hg:ssh://fortuna@ical4j.hg.sourceforge.net/hgroot/ical4j/ical4j</developerConnection>
-		<url>http://ical4j.hg.sourceforge.net/hgweb/ical4j/ical4j</url>
+		<connection>scm:hg:http://hg.code.sf.net/p/ical4j/ical4j</connection>
+		<developerConnection>scm:hg:ssh://fortuna@hg.code.sf.net/p/ical4j/ical4j</developerConnection>
+		<url>https://sourceforge.net/p/ical4j/ical4j/ci/default/tree/</url>
 	</scm>
 
 	<contributors>
