--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,9 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:hg:http://ical4j.hg.sourceforge.net:8000/hgroot/ical4j/ical4j</connection>
-		<developerConnection>scm:hg:ssh://fortuna@ical4j.hg.sourceforge.net/hgroot/ical4j/ical4j</developerConnection>
-		<url>http://ical4j.hg.sourceforge.net/hgweb/ical4j/ical4j</url>
+        <connection>scm:git:https://github.com/ical4j/ical4j.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:ical4j/ical4j.git</developerConnection>
+        <url>https://github.com/ical4j/ical4j</url>
 	</scm>
 
 	<contributors>
