--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,13 @@
             <type>zip</type>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>bndlib</artifactId>
+            <version>2.2.0</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<reporting>
