Removed all references to commons-logging

--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.slf4j:jcl-over-slf4j:1.7.7',
+    compile 'org.slf4j:slf4j-api:1.7.7',
             'commons-codec:commons-codec:1.9',
             'org.apache.commons:commons-lang3:3.3.2',
             'org.codehaus.groovy:groovy-all:2.3.2',
