--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,14 @@
 	<licenses>
 		<license>
             <name>${project.name} - License</name>
-			<url>${project.scm.url}/LICENSE?format=raw</url>
+			<url>${project.scm.url}/raw-file/tip/LICENSE</url>
 		</license>
 	</licenses>
 
 	<scm>
-		<connection>scm:hg:http://hg.code.sf.net/p/ical4j/ical4j</connection>
-		<developerConnection>scm:hg:ssh://fortuna@hg.code.sf.net/p/ical4j/ical4j</developerConnection>
-		<url>https://sourceforge.net/p/ical4j/ical4j/ci/default/tree/</url>
+        <connection>scm:git:https://github.com/ical4j/ical4j.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:ical4j/ical4j.git</developerConnection>
+        <url>https://github.com/ical4j/ical4j</url>
 	</scm>
 
 	<contributors>
