--- a/build.gradle
+++ b/build.gradle
@@ -56,8 +56,12 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    slf4jVersion = '1.7.10'
+}
+
 dependencies {
-    compile 'org.slf4j:jcl-over-slf4j:1.7.7',
+    compile "org.slf4j:jcl-over-slf4j:$slf4jVersion",
             'commons-codec:commons-codec:1.9',
             'org.apache.commons:commons-lang3:3.3.2',
             'org.codehaus.groovy:groovy-all:2.3.2',
@@ -65,7 +69,8 @@ dependencies {
 
     testCompile 'org.spockframework:spock-core:0.7-groovy-2.0',
             'commons-io:commons-io:2.4',
-            'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
+            'org.ccil.cowan.tagsoup:tagsoup:1.2.1',
+            "org.slf4j:slf4j-log4j12:$slf4jVersion"
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
