Added default sonatype credentials so the build doesn't fail when no credentials are supplied

--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,14 @@ version = release.projectVersion
 description = '''
 A Java library for reading and writing iCalendar (*.ics) files
 '''
-ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
+
+ext {
+    isReleaseVersion = !version.endsWith("SNAPSHOT")
+
+    // default sonatype credentials
+    sonatypeUsername = ''
+    sonatypePassword = ''
+}
 
 uploadArchives {
     repositories {
