--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ jdk:
   - oraclejdk7
   - openjdk7
   - openjdk6
-before_script: "./gradlew assemble -PreleaseVersion=2.0"
 deploy:
   provider: releases
   api_key:
     secure: DpTp3xxZrKP21I13G8dYY5EBra5tcf9TsF1y9oLRdOSoVvUe0XaOQ+9WPG2RgnuH1DPVj1n2Rr6emAZ84lSzz4H7T8gPYP4pLjmJBGyriGC7N3MTG2FCBn5l6DgTKNLxtfpek/b7nClif6vVTEse/T8/9an/Yszp9bbIZNNwStE=
   file:
-    - build/distributions/ical4j-2.0.zip
-    - build/distributions/ical4j-2.0.tar.gz
+    - build/distributions/ical4j-$RELEASE_VERSION.zip
+    - build/distributions/ical4j-$RELEASE_VERSION.tar.gz
   skip_cleanup: true
   on:
     tags: true
 before_deploy: "./gradlew assembleDist"
 sudo: false
+env: RELEASE_VERSION = 2.0
