Disable doclint in java 8

--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,9 @@ dependencies {
 }
 
 javadoc {
-    options.addStringOption('Xdoclint:none', '-quiet')
+    if (JavaVersion.current().isJava8Compatible()) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+    }
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
