--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
     dependencies {
 //        classpath 'org.ajoberstar:gradle-git:0.8.0'
 //        classpath 'me.trnl:github-release-gradle-plugin:0.1'
-        classpath 'au.com.ish.gradle:release:2.2.2'
+        classpath 'au.com.ish.gradle:release:2.2.2',
+                'org.hidetake:gradle-ssh-plugin:1.1.3'
     }
 }
 
@@ -19,9 +20,9 @@ apply plugin: 'osgi'
 apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'release'
-apply plugin: 'distribution'
 //apply plugin: 'github-pages'
 //apply plugin: 'github'
+apply from: 'gradle/dist.gradle'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -164,16 +165,4 @@ uploadArchives {
             }
         }
     }
-}
-
-distributions {
-    main {
-        contents {
-            from { ['README.md', 'LICENSE', 'AUTHORS', 'CHANGELOG', 'build/docs', 'build/libs']}
-        }
-    }
-}
-
-distTar {
-    compression = Compression.GZIP
 }
