Added commons-collections dependency for closure support in validators

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     compile "org.slf4j:slf4j-api:$slf4jVersion",
             'commons-codec:commons-codec:1.9',
             'org.apache.commons:commons-lang3:3.3.2',
+            'org.apache.commons:commons-collections4:4.0',
             'org.codehaus.groovy:groovy-all:2.3.2',
             'biz.aQute.bnd:bndlib:2.3.0'
 
