Updated to use new travis-ci infrastructure

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ jdk:
 before_script:
       - echo 'Australia/Melbourne' | sudo tee /etc/timezone
       - sudo dpkg-reconfigure --frontend noninteractive tzdata
+sudo: false
