--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,10 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven {
-            url 'http://maven.tmatesoft.com/content/repositories/releases/'
-        }
     }
 
     dependencies {
-//        classpath 'org.ajoberstar:gradle-git:0.8.0'
-//        classpath 'me.trnl:github-release-gradle-plugin:0.1'
-        classpath ('au.com.ish.gradle:release:2.2.2') {
-            exclude module: 'svnkit'
-        }
+        classpath group: 'pl.allegro.tech.build', name: 'axion-release-plugin', version: '1.3.4'
         classpath 'org.hidetake:gradle-ssh-plugin:1.1.3'
     }
 }
@@ -21,9 +14,7 @@ apply plugin: 'groovy'
 apply plugin: 'osgi'
 apply plugin: 'maven'
 apply plugin: 'signing'
-apply plugin: 'release'
-//apply plugin: 'github-pages'
-//apply plugin: 'github'
+apply plugin: 'pl.allegro.tech.build.axion-release'
 apply from: 'gradle/dist.gradle'
 
 sourceCompatibility = 1.6
@@ -104,16 +95,15 @@ signing {
     sign configurations.archives
 }
 
-release {
-    failOnSnapshotDependencies = true
-    // allow modifications due to bug in the release plugin..
-    allowLocalModifications = true
-//    releaseDryRun = releaseDryRun
-    scm = 'git'
+scmVersion {
+    tag {
+        prefix = 'ical4j'
+    }
+    versionCreator 'versionWithBranch'
 }
 
 group = 'org.mnode.ical4j'
-version = System.getenv('RELEASE_VERSION') ?: release.projectVersion
+version = scmVersion.version
 description = '''
 A Java library for reading and writing iCalendar (*.ics) files
 '''
