Added sonar plugin to support code analysis

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ buildscript {
     }
 }
 
+plugins {
+  id "org.sonarqube" version "1.2"
+}
+
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'osgi'
