--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'osgi'
 apply plugin: 'maven'
+apply plugin: 'jacoco'
 apply plugin: 'signing'
 apply plugin: 'pl.allegro.tech.build.axion-release'
 apply from: 'gradle/dist.gradle'
