--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     dependencies {
         classpath group: 'pl.allegro.tech.build', name: 'axion-release-plugin', version: '1.3.4'
         classpath 'org.hidetake:gradle-ssh-plugin:1.1.3'
+        classpath 'com.updateimpact:updateimpact-gradle-plugin:1.1.6'
     }
 }
 
@@ -21,6 +22,8 @@ apply plugin: 'jacoco'
 apply plugin: 'signing'
 apply plugin: 'pl.allegro.tech.build.axion-release'
 apply from: 'gradle/dist.gradle'
+apply plugin: 'com.updateimpact.updateimpact'
+
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -71,6 +74,11 @@ dependencies {
             'commons-io:commons-io:2.4',
             'org.ccil.cowan.tagsoup:tagsoup:1.2.1',
             "org.slf4j:slf4j-log4j12:$slf4jVersion"
+}
+
+updateImpactSubmit {
+    apiKey = updateimpactApiKey
+    openBrowser = updateimpactOpenBrowser
 }
 
 javadoc {
