--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath group: 'pl.allegro.tech.build', name: 'axion-release-plugin', version: '1.3.4'
+        classpath group: 'pl.allegro.tech.build', name: 'axion-release-plugin', version: '1.4.0'
         classpath 'org.hidetake:gradle-ssh-plugin:1.1.3'
     }
 }
@@ -106,6 +106,9 @@ scmVersion {
         prefix = 'ical4j'
     }
     versionCreator 'versionWithBranch'
+    branchVersionCreator = [
+        'release/.*': 'simple'
+    ]
     nextVersion {
         suffix = 'beta1'
         separator = '-'
