--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ apply plugin: 'signing'
 apply plugin: 'pl.allegro.tech.build.axion-release'
 apply from: 'gradle/dist.gradle'
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 /*
 githubPages {
@@ -71,7 +71,7 @@ dependencies {
     testCompile 'org.spockframework:spock-core:0.7-groovy-2.0',
             'commons-io:commons-io:2.4',
             'org.ccil.cowan.tagsoup:tagsoup:1.2.1',
-            "org.slf4j:slf4j-log4j12:$slf4jVersion"
+            "org.slf4j:slf4j-log4j12:$slf4jVersion", 'org.ehcache:ehcache:3.1.3'
 }
 
 javadoc {
