Set update.timezone to false.

--- a/src/test/resources/ical4j.properties
+++ b/src/test/resources/ical4j.properties
@@ -34,7 +34,7 @@
 
 #net.fortuna.ical4j.timezone.registry=net.fortuna.ical4j.model.DefaultTimeZoneRegistryFactory
 
-#net.fortuna.ical4j.timezone.update.enabled={true|false}
+net.fortuna.ical4j.timezone.update.enabled=false
 #net.fortuna.ical4j.timezone.update.timeout.connect ## - Connect timeout ( milliseconds, e.g. 10000 - 10s, unlimited by default )
 #net.fortuna.ical4j.timezone.update.timeout.read ## - Read timeout ( milliseconds, e.g. 10000 - 10s, unlimited by default )
 #net.fortuna.ical4j.timezone.update.proxy.enabled={true|false} ## - Use proxy ( true / false )
