--- a/pom.xml
+++ b/pom.xml
@@ -17,17 +17,20 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
-		<!-- Deactivate javadoc, checkstyle, findbugs, jacoco and pmd -->
-		<checkstyle.skip>true</checkstyle.skip>		
-		<enforcer.skip>true</enforcer.skip>
-		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
-
+		<!-- Dependencies versions. -->
 		<slf4j.version>1.7.10</slf4j.version>
 		<commons-codec.version>1.9</commons-codec.version>
 		<commons-lang3.version>3.3.2</commons-lang3.version>
 		<commons-io.version>2.4</commons-io.version>
-
+		
+		<!-- Deactivate checkstyle, findbugs, jacoco and pmd -->
+		<checkstyle.skip>true</checkstyle.skip>
+		<findbugs.skip>true</findbugs.skip>
+		<jacoco.skip>true</jacoco.skip>
+		<pmd.skip>true</pmd.skip>
+		<enforcer.skip>true</enforcer.skip>
+		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+		<additionalparam>-Xdoclint:none</additionalparam>
 	</properties>
 
 
