--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ apply plugin: 'signing'
 apply plugin: 'pl.allegro.tech.build.axion-release'
 apply from: 'gradle/dist.gradle'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 /*
 githubPages {
@@ -66,7 +66,8 @@ dependencies {
             'org.apache.commons:commons-lang3:3.3.2',
             'org.apache.commons:commons-collections4:4.0',
             'org.codehaus.groovy:groovy-all:2.3.2',
-            'biz.aQute.bnd:bndlib:2.3.0'
+            'biz.aQute.bnd:bndlib:2.3.0',
+            'org.threeten:threetenbp:1.3.3'
 
     testCompile 'org.spockframework:spock-core:0.7-groovy-2.0',
             'commons-io:commons-io:2.4',
