--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ jdk:
   - oraclejdk8		
   - oraclejdk7		
   - openjdk7
+sudo: required
+services:
+  - docker
+before_install:
+  - docker pull benfortuna/tzurl
+  - docker run -v $(pwd)/src/main/resources/zoneinfo:/zoneinfo -it benfortuna/tzurl rsync -av --delete /usr/local/apache2/htdocs/zoneinfo /
 script:
   - ./gradlew check
 deploy:
@@ -21,7 +27,6 @@ deploy:
     tags: true
     jdk: openjdk7
 before_deploy: "./gradlew assembleMainDist"
-sudo: true
 addons:
   hostname: travis-ci
 after_script:
