--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ services:
 before_install:
   - docker pull benfortuna/tzurl
   - docker run -v $(pwd)/src/main/resources/zoneinfo:/zoneinfo -it benfortuna/tzurl rsync -av --delete /usr/local/apache2/htdocs/zoneinfo /
+  - docker run -v $(pwd)/src/main/resources/zoneinfo-global:/zoneinfo-global -it benfortuna/tzurl rsync -av --delete /usr/local/apache2/htdocs/zoneinfo-global /
 script:
   - ./gradlew check
 deploy:
