--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
-    - $HOME/.gradle
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
     - $HOME/.sonar
 language: java
 jdk:
   - oraclejdk8		
-  - oraclejdk7		
+  - openjdk8		
   - openjdk7
+dist: trusty
 sudo: required
 services:
   - docker
