--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,8 @@ dependencies {
             'commons-codec:commons-codec:1.9',
             'org.apache.commons:commons-lang3:3.3.2',
             'org.apache.commons:commons-collections4:4.0',
-			'org.threeten:threetenbp:1.3.3'
+			'org.threeten:threetenbp:1.3.3',
+            'com.squareup.dagger:dagger:1.2.5'
     compile 'org.codehaus.groovy:groovy-all:2.3.2', optional
     compile 'biz.aQute.bnd:bndlib:2.3.0', optional
 
