--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - ./gradlew build jacocoTestReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-  - "[[ $TRAVIS_BRANCH =~ ^release ]] && ./gradlew release bintrayUpload"
+  - GIT_BRANCH=$TRAVIS_BRANCH etc/scripts/tag-release.sh
 #deploy:
 #  provider: releases
 #  api_key:
