--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker pull benfortuna/tzurl
-  - docker run -v $(pwd)/src/main/resources/zoneinfo:/zoneinfo -it benfortuna/tzurl rsync -av --delete /usr/local/apache2/htdocs/zoneinfo /
-  - docker run -v $(pwd)/src/main/resources/zoneinfo-global:/zoneinfo-global -it benfortuna/tzurl rsync -av --delete /usr/local/apache2/htdocs/zoneinfo-global /
+  - etc/scripts/update-zoneinfo.sh
 script:
   - ./gradlew build jacocoTestReport
 after_success:
