Added required maven metadata for maven central release

--- a/build.gradle
+++ b/build.gradle
@@ -200,6 +200,15 @@ publishing {
                 scmNode.appendNode('url', 'https://github.com/ical4j/ical4j')
                 scmNode.appendNode('connection', 'scm:git@github.com:ical4j/ical4j.git')
                 scmNode.appendNode('developerConnection', 'scm:git@github.com:ical4j/ical4j.git')
+
+                def licenseNode = asNode().appendNode('licenses').appendNode('license')
+                licenseNode.appendNode('name', 'iCal4j - License')
+                licenseNode.appendNode('url', 'https://raw.githubusercontent.com/ical4j/ical4j/master/LICENSE')
+                licenseNode.appendNode('distribution', 'repo')
+
+                def developerNode = asNode().appendNode('developers').appendNode('developer')
+                developerNode.appendNode('id', 'fortuna')
+                developerNode.appendNode('name', 'Ben Fortuna')
             }
         }
     }
@@ -226,7 +235,7 @@ bintray {
                 sync = isReleaseVersion
                 user = sonatype_username //OSS user token: mandatory
                 password = sonatype_password //OSS user password: mandatory
-                close = '0' //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
+//                close = '0' //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
             }
         }
     }
