--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 systemProp.sonar.host.url=https://sonar.mnode.org
 
-sonatype_username=
-sonatype_password=
+sonatype_username=EiVeUlJO
+sonatype_password=0uz7Ocz3sVHkGOvVnHEKzDZRYOFHcSmzyhiuf6tYfGAR
 
 bintray_user=
 bintray_key=
