--- a/build.gradle
+++ b/build.gradle
@@ -144,6 +144,10 @@ ext {
     // sonatype credentials
     sonatype_username = project.hasProperty('sonatype_username') ? project.getProperty('sonatype_username') : ''
     sonatype_password = project.hasProperty('sonatype_password') ? project.getProperty('sonatype_password') : ''
+
+    // bintray credentials
+    bintray_user = project.hasProperty('bintray_user') ? project.getProperty('bintray_user') : ''
+    bintray_key = project.hasProperty('bintray_key') ? project.getProperty('bintray_key') : ''
 }
 
 uploadArchives {
