--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,8 @@ dependencies {
         'org.spockframework:spock-core:0.7-groovy-2.0',
         'commons-io:commons-io:2.4',
         'org.ccil.cowan.tagsoup:tagsoup:1.2.1',
-        "org.slf4j:slf4j-log4j12:$slf4jVersion"
+        "org.slf4j:slf4j-log4j12:$slf4jVersion",
+        'org.ehcache:ehcache:3.4.0'
 }
 
 jacocoTestReport {
