--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,13 @@ buildscript {
     repositories {
         mavenCentral()
     }
-
     dependencies {
-        classpath group: 'pl.allegro.tech.build', name: 'axion-release-plugin', version: '1.7.1'
         classpath 'org.hidetake:gradle-ssh-plugin:1.1.3'
     }
 }
 
 plugins {
+    id 'pl.allegro.tech.build.axion-release' version '1.8.1'
     id "nebula.provided-base" version "3.0.3"
     id "com.jfrog.bintray" version "1.7.3"
 }
