--- a/src/test/resources/ical4j.properties
+++ b/src/test/resources/ical4j.properties
@@ -42,6 +42,8 @@ net.fortuna.ical4j.timezone.update.enabled=false
 #net.fortuna.ical4j.timezone.update.proxy.host ## - Proxy server host name ( e.g. proxy.myorg.com )
 #net.fortuna.ical4j.timezone.update.proxy.port=8080 ## - Proxy server port number ( e.g. 3128 )
 
+#net.fortuna.ical4j.timezone.cache.impl=net.fortuna.ical4j.util.MapTimeZoneCache
+
 #net.fortuna.ical4j.timezone.date.floating={true|false}
 
 #net.fortuna.ical4j.factory.decoder=net.fortuna.ical4j.util.DefaultDecoderFactory
