--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ description = '''
 A Java library for reading and writing iCalendar (*.ics) files
 '''
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 ext {
     slf4jVersion = '1.7.25'
@@ -72,8 +72,7 @@ dependencies {
     api "org.slf4j:slf4j-api:$slf4jVersion",
             'commons-codec:commons-codec:1.10',
             'org.apache.commons:commons-lang3:3.6',
-            'org.apache.commons:commons-collections4:4.1',
-			'org.threeten:threetenbp:1.3.6'
+            'org.apache.commons:commons-collections4:4.1'
     
     compile 'javax.cache:cache-api:1.0.0', optional
     compile 'org.codehaus.groovy:groovy-all:2.3.2', optional
